force-app/main/default/objects/Customer_Order__c/Customer_Order__c.object-meta.xml
<CustomObject>
    <description>A customer&apos;s order.</description>
    <label>Customer Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>