force-app/main/default/objects/Customer_Order__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <description>The date the order was placed.</description>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>