force-app/main/default/objects/Customer_Order__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <description>The estimated date of delivery for the order.</description>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>