force-app/main/default/objects/Customer_Order__c/fields/Finish_Type__c.field-meta.xml
<CustomField>
    <fullName>Finish_Type__c</fullName>
    <label>Finish Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Season</fullName>
            </value>
            <value>
                <fullName>Enamel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>