force-app/main/default/objects/Customer_Order__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <description>Notes from the customer about the order.</description>
    <label>Order Notes</label>
    <type>TextArea</type>
</CustomField>