force-app/main/default/objects/Customer_Order__c/fields/Restoration__c.field-meta.xml
<CustomField>
    <fullName>Restoration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this job is a restoration job.</description>
    <label>Restoration</label>
    <type>Checkbox</type>
</CustomField>