force-app/main/default/objects/Customer_Order__c/recordTypes/Owned_By_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Owned_By_Maintenance</fullName>
    <active>true</active>
    <description>The states of the customer&apos;s order a repair expert is able to set.</description>
    <label>Owned By Maintenance</label>
</RecordType>