force-app/main/default/objects/Customer_Order__c/recordTypes/Owned_By_Sales.recordType-meta.xml
<RecordType>
    <fullName>Owned_By_Sales</fullName>
    <active>true</active>
    <description>The states of the customer&apos;s order a sales representative is able to set.</description>
    <label>Owned By Sales</label>
</RecordType>