force-app/main/default/objects/Customer_Order__c/listViews/Pending_Orders.listView-meta.xml
<ListView>
    <fullName>Pending_Orders</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Pending Orders</label>
</ListView>